cmake_minimum_required(VERSION 3.5)
project(display)
find_package(OpenCV REQUIRED)

include_directories("../../include/")
include_directories("../../include/display")
include_directories(${OpenCV_INCLUDE_DIRS}) 
aux_source_directory(${PROJECT_SOURCE_DIR} SRC_FILES)
add_executable(${PROJECT_NAME} ${SRC_FILES})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${CMAKE_DL_LIBS} pthread glfw X11 Xi dl GL)
add_definitions(-DNUM_CAMERA=6)
add_definitions(-DSCR_WIDTH=1280)
add_definitions(-DSCR_HEIGHT=720)
# add_definitions(-DUSE_CAPTURE)
# add_definitions(-DUSE_YUV)
add_definitions(-DSHADERPATH="../shaders/")
add_definitions(-DDATAPATH="../../../../data/")
add_definitions(-DCAPTURE_FORMAT=V4L2_PIX_FMT_NV12)